--- a/level1/index.html
+++ b/level1/index.html
@@ -131,5 +131,7 @@
       vero consequatur tenetur perferendis possimus optio nam distinctio sint
       esse nulla repellat?
     </p>
+    <div class="box1"></div>
+    <div class="box2"></div>
   </body>
 </html>
